@@ -5,6 +5,7 @@
 # All instances on the cluster are surfaced to clients.
 
 cluster: "kiji://.env/"
+cors: false
 freshening:
   freshen: true  # whether to freshen columns by default
   timeout: 100   # default amount of time in ms to wait for freshening to finish
